REGRESSION (LinearMediaPlayer): Start and end times are not displayed in the scrubber https://bugs.webkit.org/show_bug.cgi?id=269817 rdar://123339430

Reviewed by Jer Noble.

WebKit needs to provide `remainingTime` to LinearMediaPlayer in order for start and end times to be
computed in the scrubber. Computed remainingTime as duration - currentTime.

* Source/WebKit/Platform/ios/PlaybackSessionInterfaceLMK.mm:
(WebKit::PlaybackSessionInterfaceLMK::durationChanged):
(WebKit::PlaybackSessionInterfaceLMK::currentTimeChanged):

Canonical link: https://commits.webkit.org/275119@main